@startuml
entity "Process" as Process {
  * process_id : int
  --
  workstation_id : int
  process_duration_in_mins : int
  setup_duration_in_mins : int
}

entity "Item" as Item {
  * item_id : int
}

entity "BoughtItem" as BoughtItem {
  * item_id : int
  base_price: float
  discount_amount: int
  discount_percentage: int
  mean_order_duration_in_periodes: float
  mean_order_standard_deviation_in_periodes: float
}

entity "ProducedItem" as ProducedItem {
  * item_id : int
}


entity PrimaryItem {
  * item_id : int
  sell_price: float
}

entity FullProducedItem {
  * item_id : int
  base_value_price: float
}

entity "StepProduced" as StepProduced {
  * unique_item_id : int
    parent_item_id : int
}

entity "Workstation" as Workstation {
  * workstation_id : int
}

entity "ProcessInput" as ProcessInput {
  * process_id : int
  * item_id : int
  * quantity : int
}

entity "ProcessOutput" as ProcessOutput {
  * process_id : int
  * item_id : int
}

Process ||--o{ ProcessInput : "has inputs"
Process ||--|| ProcessOutput : "produces"
ProcessInput }o--|| Item : "consumes"
ProcessOutput ||--o{ Item : "creates"
Item ||--|{ BoughtItem : "can be"
Item ||--|{ ProducedItem : "can be"
ProducedItem ||--|{ FullProducedItem : "can be"
FullProducedItem ||--|{ PrimaryItem : "can be"
ProducedItem ||--|{ StepProduced : "can be"
StepProduced ||--|| FullProducedItem : "has"
Process ||--|| Workstation : "takes place at"
@enduml
